--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   another_transformer_page_view: 2.0.0
-
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
